--- a/index.html
+++ b/index.html
@@ -4,8 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    
+    <div class="body display-flex">
+        <nav class="sidebar"></nav>
+        <main>
+            <div class="upgrade"></div>
+            <div class="playlists">
+                <div class="test"></div>
+            </div>
+        </main>
+    </div>
+    <nav class="playing"></nav>
 </body>
 </html>
