Finita struttura sidebar

--- a/index.html
+++ b/index.html
@@ -5,11 +5,69 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <div class="body display-flex">
-        <nav class="sidebar"></nav>
+        <nav class="sidebar">
+            <div class="container">
+                <div class="row">
+                    <div class="col-100">
+                        <div class="content color-white">
+                            <div class="display-flex-no-wrap align-center">
+                                <div class="margin-5"><img src="./img/home.svg" alt="" class="icon-sidebar"></div>
+                                <div>Home</div>
+                            </div>
+                            <div class="display-flex-no-wrap align-center">
+                                <div class="margin-5"><img src="./img/search.svg" alt="" class="icon-sidebar"></div>
+                                <div>Cerca</div>
+                            </div>
+                            <div class="display-flex-no-wrap align-center">
+                                <div class="margin-5"><img src="./img/libreria.svg" alt="" class="icon-sidebar"></div>
+                                <div>La tua libreria</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-100">
+                        <div class="content color-white">
+                            <h4 class="margin-5">PLAYLIST</h4>
+                            <div class="display-flex-no-wrap align-center">
+                                <div class="margin-5"><i class="fa-solid fa-square-plus"></i></div>
+                                <div>La tua libreria</div>
+                            </div>
+                            <ul class="margin-5">
+                                <li>Nome Playlist</li>
+                                <li>Nome Playlist</li>
+                                <li>Nome Playlist</li>
+                                <li>Nome Playlist</li>
+                                <li>Nome Playlist</li>
+                                <li>Nome Playlist</li>
+                                <li>Nome Playlist</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-100">
+                        <div class="content color-white bottom-0">
+                            <div class="display-flex-no-wrap align-center">
+                                <div class="margin-5"><img src="./img/download.svg" alt="" class="icon-sidebar"></div>
+                                <div>Installa app</div>
+                            </div>
+                            <hr class="color-white">
+                            <div class="display-flex-no-wrap align-center">
+                                <div class="profile"><div class="margin-5"><img src="./img/profile.svg" alt="" class="icon-profile"></div></div>
+                                <div>John Doe</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </nav>
         <main>
             <div class="upgrade"></div>
             <div class="playlists">
