--- a/index.html
+++ b/index.html
@@ -39,15 +39,18 @@
                                 <div class="margin-5"><i class="fa-solid fa-square-plus"></i></div>
                                 <div>La tua libreria</div>
                             </div>
-                            <ul class="margin-5">
-                                <li>Nome Playlist</li>
-                                <li>Nome Playlist</li>
-                                <li>Nome Playlist</li>
-                                <li>Nome Playlist</li>
-                                <li>Nome Playlist</li>
-                                <li>Nome Playlist</li>
-                                <li>Nome Playlist</li>
-                            </ul>
+                            <div>
+                                <ul class="margin-5">
+                                    <li>Nome Playlist</li>
+                                    <li>Nome Playlist</li>
+                                    <li>Nome Playlist</li>
+                                    <li>Nome Playlist</li>
+                                    <li>Nome Playlist</li>
+                                    <li>Nome Playlist</li>
+                                    <li>Nome Playlist</li>
+                                </ul>                                
+                            </div>
+
                         </div>
                     </div>
                 </div>
@@ -71,7 +74,45 @@
         <main>
             <div class="upgrade"></div>
             <div class="playlists">
-                <div class="test"></div>
+                <div class="row space-between">
+                    <div class="col-16">
+                        <div class="content">
+                            <div class="album-div">
+                                <img src="./img/metal_lifting.jpg" alt="" class="album">
+                                <div class="overlay">
+                                    <i class="fa-regular fa-circle-play color-white"></i>
+                                </div>
+                            </div>
+                            <h4 class="text-center color-white">Heavy Metal</h4>
+                            <div class="color-gray text-center">Subtitle</div>
+                        </div>
+                    </div>
+                    <div class="col-16">
+                        <div class="content">
+                            <img src="./img/metal_lifting.jpg" alt="" class="album">
+                        </div>
+                    </div>
+                    <div class="col-16">
+                        <div class="content">
+                            <img src="./img/metal_lifting.jpg" alt="" class="album">
+                        </div>
+                    </div>
+                    <div class="col-16">
+                        <div class="content">
+                            <img src="./img/metal_lifting.jpg" alt="" class="album">
+                        </div>
+                    </div>
+                    <div class="col-16">
+                        <div class="content">
+                            <img src="./img/metal_lifting.jpg" alt="" class="album">
+                        </div>
+                    </div>
+                    <div class="col-16">
+                        <div class="content">
+                            <img src="./img/metal_lifting.jpg" alt="" class="album">
+                        </div>
+                    </div>                    
+                </div>
             </div>
         </main>
     </div>
