Finito i riprodotti di recente

--- a/index.html
+++ b/index.html
@@ -74,12 +74,22 @@
         <main>
             <div class="upgrade"></div>
             <div class="playlists">
+                <div class="row">
+                    <div class="col-100">
+                        
+                    </div>
+                    <div class="col-100">
+                        <div class="content color-white">
+                            <h1>Recently played</h1>
+                        </div>
+                    </div>
+                </div>
                 <div class="row space-between">
                     <div class="col-16">
                         <div class="content">
                             <div class="album-div">
                                 <img src="./img/metal_lifting.jpg" alt="" class="album">
-                                <div class="overlay">
+                                <div class="overlay hidden">
                                     <i class="fa-regular fa-circle-play color-white"></i>
                                 </div>
                             </div>
@@ -89,27 +99,62 @@
                     </div>
                     <div class="col-16">
                         <div class="content">
-                            <img src="./img/metal_lifting.jpg" alt="" class="album">
+                            <div class="album-div">
+                                <img src="./img/stranger.jpeg" alt="" class="album">
+                                <div class="overlay hidden">
+                                    <i class="fa-regular fa-circle-play color-white"></i>
+                                </div>
+                            </div>
+                            <h4 class="text-center color-white">Heavy Metal</h4>
+                            <div class="color-gray text-center">Subtitle</div>
                         </div>
                     </div>
                     <div class="col-16">
                         <div class="content">
-                            <img src="./img/metal_lifting.jpg" alt="" class="album">
+                            <div class="album-div">
+                                <img src="./img/aquietplace.jpeg" alt="" class="album">
+                                <div class="overlay hidden">
+                                    <i class="fa-regular fa-circle-play color-white"></i>
+                                </div>
+                            </div>
+                            <h4 class="text-center color-white">Heavy Metal</h4>
+                            <div class="color-gray text-center">Subtitle</div>
                         </div>
                     </div>
                     <div class="col-16">
                         <div class="content">
-                            <img src="./img/metal_lifting.jpg" alt="" class="album">
+                            <div class="album-div">
+                                <img src="./img/split.jpeg" alt="" class="album">
+                                <div class="overlay hidden">
+                                    <i class="fa-regular fa-circle-play color-white"></i>
+                                </div>
+                            </div>
+                            <h4 class="text-center color-white">Heavy Metal</h4>
+                            <div class="color-gray text-center">Subtitle</div>
                         </div>
                     </div>
                     <div class="col-16">
                         <div class="content">
-                            <img src="./img/metal_lifting.jpg" alt="" class="album">
+                            <div class="album-div">
+                                <img src="./img/cure.jpeg" alt="" class="album">
+                                <div class="overlay hidden">
+                                    <i class="fa-regular fa-circle-play color-white"></i>
+                                </div>
+                            </div>
+                            <h4 class="text-center color-white">Heavy Metal</h4>
+                            <div class="color-gray text-center">Subtitle</div>
                         </div>
                     </div>
                     <div class="col-16">
                         <div class="content">
-                            <img src="./img/metal_lifting.jpg" alt="" class="album">
+                            <div class="album-div">
+                                <img src="./img/sinister.jpeg" alt="" class="album">
+                                <div class="overlay hidden">
+                                    <i class="fa-regular fa-circle-play color-white"></i>
+                                </div>
+                            </div>
+                            <h4 class="text-center color-white">Heavy Metal</h4>
+                            <div class="color-gray text-center">Subtitle</div>
                         </div>
                     </div>                    
                 </div>
